--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
-$base-color: #7386D5 !default;
+$base-color: #1f1e1d !default;
 $bg-color: #98AC9E !default;
 $transparent-background: rgba($bg-color, 0) !default;
 $color: #000 !default;
+$body: #1f1e1d !default;
