--- a/src/scss/vue-bootstrap-sidebar.scss
+++ b/src/scss/vue-bootstrap-sidebar.scss
@@ -7,6 +7,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  overflow: hidden;
 
   &.sidebar-hidden {
     margin-left: -250px;
@@ -46,7 +47,7 @@
       .fa-icon {
         display: inline-block;
         text-align: center;
-        width: 25px;
+        width: 30px;
       }
 
       .link-name {
