--- a/src/scss/default-theme.scss
+++ b/src/scss/default-theme.scss
@@ -1,5 +1,8 @@
+@import './jamroom.scss';
 @import './vue-bootstrap-sidebar';
 @import './variables';
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
 
 .default-theme {
 
